// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GameNotification snapshots show player banner when it is their turn 1`] = `
<section
  class="hero is-info container"
  enter-active-class="animate__animated animate__jackInTheBox"
  exit-active-class="animate__animated animate__slideOutLeft"
  tag="div"
>
  <div
    class="hero-body"
  >
    <div
      class="container"
    >
      <h1
        class="title"
      >
        Your Turn!
      </h1>
    </div>
  </div>
</section>
`;

exports[`GameNotification snapshots shows game over banner when the game is over 1`] = `
<section
  class="hero is-success container"
  enter-active-class="animate__animated animate__jackInTheBox"
  exit-active-class="animate__animated animate__slideOutLeft"
  tag="div"
>
  <div
    class="hero-body"
  >
    <div
      class="container"
    >
      <h1
        class="title"
      >
        Game Over!
      </h1>
       
      <button
        class="button is-success is-inverted"
        id="new-game-button"
        type="button"
      >
        <span
          class="icon is-small"
        >
          <i
            class="mdi mdi-redo"
          />
        </span>
         
        <span>
          New Game
        </span>
         
        <!---->
      </button>
    </div>
  </div>
</section>
`;

exports[`GameNotification snapshots shows nothing when its not the players turn 1`] = `<!---->`;
